# tictactoe-rl

./: .gitignore  CMakeLists.txt  PYTHON_AI_README.md  README.md  debug_working_dir.py  main.py  pyproject.toml  test_python_ai.cpp
.github/workflows/: ci.yml
include/: environment.h
specs/: backlog.json  backlog.md  datamodel.md  prd.md  sprintplan.md  test_architecture.md
src/: environment.cpp
tests/: env_test.cpp  test_core_engine.cpp  test_integration.cpp  test_state_representation.cpp
